# tmw-tmca-solidification-cracking-analysis

./: .gitignore  ADD_LOCAL_RAW_DATA_AND_RUN.md  CITATION.cff  DATA_LICENSE_RECOMMENDATION.md  LICENSE  README.md  START_HERE.md  pyproject.toml
config/: README.md  analysis_settings.json  default_analysis_config.json
data/control_csv_templates/: README.md  (+1 more)
data/manifest/: README.md  (+11 more)
docs/: ADD_RAW_DATA_LOCALLY.md  RUN_INCLUDED_RAW_DATA.md  START_HERE_first_time_user.md  code_map_for_modification.md  complete_experimental_analysis_workflow.md  control_csv_specification.md  first_time_user_checklist.md  github_zenodo_upload_instructions.md  github_zenodo_upload_with_raw_data.md  manual_weld_start_selection.md  manuscript_data_availability_text.md  material_condition_flexibility.md  raw_data_release_notes.md  raw_folder_reanalysis_protocol.md  run_manifest_specification.md  smoke_test_results.md  user_adjustable_options.md  what_not_to_upload.md
raw_data/: README.md
scripts/: 00_show_workflow.py  01_analyze_tmca_screening.py  02_summarize_tmca_screening.py  03_plan_tmw_from_tmca.py  04_analyze_tmw_bracketing.py  05_fit_tmw_conditions.py  06_compare_tmw_conditions.py  07_convert_raw_xml_folder.py  08_create_manifest_scaffold.py  09_pick_weld_start.py  10_run_benny_raw_data_workflow.py  11_install_local_raw_data.py  12_check_github_file_sizes.py  _bootstrap.py  check_environment.py  reproduce_all.py
src/: __init__.py  config.py  data_io.py  metrics.py  plots.py  raw_import.py  run_analysis.py  schema.py  weld_start.py  workflow.py
tests/: conftest.py  test_core.py
(+134 files in other folders)
